# wish

./: CMakeLists.txt
inc/wish/: wish.h
src/: main.cpp  wish.cpp
